// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entitites mediaTypes reducer should handle FETCH_MEDIA_TYPES_SUCCESS 1`] = `
Object {
  "ids": undefined,
  "isFetching": false,
}
`;

exports[`entitites mediaTypes reducer should return the initial state 1`] = `
Object {
  "error": null,
  "ids": Array [],
  "isFetching": false,
}
`;
